human-languages and programming-languages, loading up datasets

--- a/language_classifier_pytorch.ipynb
+++ b/language_classifier_pytorch.ipynb
@@ -16,38 +16,38 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "v4yIhZd4j1V7"
-      },
-      "outputs": [],
       "source": [
-        "# !pip install -Uqq fastai\n",
-        "# from fastai.vision.all import *"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install -Uqq fastai\n",
-        "from fastai.text.all import *"
+        "from google.colab import drive\n",
+        "import os\n",
+        "\n",
+        "#drive.mount('/content/drive')\n",
+        "\n",
+        "# Define specific path where data is stored\n",
+        "base_path = '/content/drive/MyDrive/Colab Notebooks/language-classifier/language-datasets'\n",
+        "\n",
+        "# Check if folders exist and print confirmation\n",
+        "if os.path.exists(f'{base_path}/programming-languages') and os.path.exists(f'{base_path}/human-languages'):\n",
+        "  print(f\"Directories exist at: {base_path}\")\n",
+        "else:\n",
+        "  print(\"One or more directories do not exist. Please check the paths.\")"
       ],
       "metadata": {
-        "id": "1StwfRM0uos9"
-      },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "languagePath = untar_data(URLS.Languages)"
-      ],
-      "metadata": {
-        "id": "1WF-tm6SvqWY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rT8d0W86Z4Xs",
+        "outputId": "f444bc2b-22c1-48e1-a852-a031520df63e"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Directories exist at: /content/drive/MyDrive/Colab Notebooks/language-classifier/language-datasets\n"
+          ]
+        }
+      ]
     }
   ]
 }
